--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.28.0",
+    "@clerk/themes": "^2.4.3",
     "@prisma/client": "6.13.0",
+    "autoprefixer": "^10.4.21",
+    "lucide-react": "^0.534.0",
     "next": "15.4.4",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
@@ -23,7 +28,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
     "prisma": "^6.13.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
