--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@clerk/themes": "^2.4.3",
     "@prisma/client": "6.13.0",
     "autoprefixer": "^10.4.21",
+    "chart.js": "^4.5.0",
     "lucide-react": "^0.534.0",
     "next": "15.4.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
