--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.534.0",
     "next": "15.4.4",
     "next-themes": "^0.4.6",
+    "openai": "^5.10.2",
     "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0"
